# JPG_to_ASCII

./: CMakeLists.txt
include/: ImgProcessor.h  UI.h
src/: ImgProcessor.cpp  main.cpp
